--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     width: 98%;
     padding-left: 12px;
     padding-right: 16px;
-
+    font-size: 18px;
 
 }
 
@@ -31,11 +31,11 @@
     text-decoration: none;
     list-style-type: none;
     float: left;
-    font-size: 17px;
+    /* font-size: 17px; */
     color: black;
     /* font-weight: 700; */
     background-color: white;
-    padding: 25px 22px 25px 22px;
+    padding: 24px 22px 25px 22px;
 }
 
 .right-bar {
@@ -61,7 +61,7 @@
 .courses a {
     text-decoration: none;
     color: black;
-    font-size: 17px;
+    /* font-size: 17px; */
 }
 
 #space {
@@ -84,7 +84,7 @@
 
 #login {
     display: inline-block;
-    font-size: 17px;
+    /* font-size: 17px; */
     color: white;
     text-decoration: none;
     background-color: #04AA6D;
@@ -113,6 +113,15 @@
     align-items:center;
     justify-content: space-evenly;
 }
+.yellow-box {
+    background-color: #FFF4A3;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items:center;
+    justify-content: space-evenly;
+}
 
 .left-box {
     /* display: inline-block; */
@@ -129,7 +138,7 @@
     /* display: inline; */
     /* position: absolute; */
     /* top: 98px; */
-    /* height: fit-content; */
+    height: fit-content;
     /* box-sizing: border-box; */
     /* border: 1px solid red; */
 
@@ -143,10 +152,14 @@
     /* position: absolute; */
     /* width: 562px; */
     /* width: auto; */
-    height: 300px;
+    height: 390px;
     padding: 16px;
     background-color: #e7e9eb;
     border-radius: 5px;
+}
+.inner-right-box h3{
+    font-size: 26px;
+    
 }
 
 .text-of-left-box {
