--- a/css/style.css
+++ b/css/style.css
@@ -156,10 +156,22 @@
     padding: 16px;
     background-color: #e7e9eb;
     border-radius: 5px;
+    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
 }
 .inner-right-box h3{
     font-size: 26px;
     
+}
+.code-html{
+    background-color: #fff;
+    padding: 8px 12px;
+    word-wrap: break-word;
+    font-family: Consolas,Menlo,"courier new",monospace;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+.green-border{
+    border-left: 4px solid #04AA6D;
 }
 
 .text-of-left-box {
