--- a/css/style.css
+++ b/css/style.css
@@ -1,97 +1,12 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap'); */
-    /* @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap'); */
-    @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
+
 *, body {
     padding: 0%;
     margin: 0%;
-    /* font-family: 'Ubuntu', sans-serif; */
     font-family: 'Source Sans Pro', sans-serif;
     line-height: 1.5;
     font-weight: 600;
-
-
-}
-
-.topbar {
-    background-color: white;
-    height: 75px;
-    width: 98%;
-    padding-left: 12px;
-    padding-right: 16px;
-    font-size: 18px;
-
-}
-
-.navbar {
-    overflow: auto;
-    display: inline-block;
-}
-
-.navbar a {
     text-decoration: none;
-    list-style-type: none;
-    float: left;
-    /* font-size: 17px; */
-    color: black;
-    /* font-weight: 700; */
-    background-color: white;
-    padding: 24px 22px 25px 22px;
-}
-
-.right-bar {
-    display: inline-block;
-    position: absolute;
-    top: 16px;
-    right: 18px;
-
-
-}
-
-.courses {
-    display: inline-block;
-    position: absolute;
-    /* top: 16px; */
-    right: 165px;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    width: 245px;
-    height: 43px;
-}
-
-.courses a {
-    text-decoration: none;
-    color: black;
-    /* font-size: 17px; */
-}
-
-#space {
-    display: inline-block;
-    padding: 8px 16px 8px 16px;
-    width: 53px;
-    height: 27px;
-    margin-right: 8px;
-    border-radius: 25px;
-}
-
-#paid {
-    display: inline-block;
-    padding: 8px 16px 8px 16px;
-    margin-right: 8px;
-    height: 27px;
-    width: 108px;
-    border-radius: 25px;
-}
-
-#login {
-    display: inline-block;
-    /* font-size: 17px; */
-    color: white;
-    text-decoration: none;
-    background-color: #04AA6D;
-    padding: 8px 16px 8px 16px;
-    border-radius: 25px;
-    width: 98px;
-    text-align: center;
 }
 
 .black-box {
@@ -124,35 +39,22 @@
 }
 
 .left-box {
-    /* display: inline-block; */
-    
-    /* position: relative; */
     padding: 3%;
-    width: 595px;
+    width: 590px;
     text-align: center;
     top: 22px;
 }
+
 .right-box {
     width: 595px;
     padding: 3%;
-    /* display: inline; */
-    /* position: absolute; */
-    /* top: 98px; */
     height: fit-content;
-    /* box-sizing: border-box; */
-    /* border: 1px solid red; */
-
-    /* display: flex;
-    justify-content: center;
-    align-items: baseline; */
 }
+
 .inner-right-box {
     display: flex;
     flex-direction: column;
-    /* position: absolute; */
-    /* width: 562px; */
-    /* width: auto; */
-    height: 390px       ;
+    height: 390px;
     padding: 16px;
     background-color: #e7e9eb;
     border-radius: 5px;
@@ -164,6 +66,7 @@
 }
 .code-html{
     background-color: #fff;
+    font-weight: 100;
     padding: 8px 12px;
     word-wrap: break-word;
     font-family: Consolas,Menlo,"courier new",monospace;
@@ -203,30 +106,7 @@
     border-radius: 25px;
 }
 
-.logo {
-    display: inline;
-}
 
-.logo img {
-    height: 42px;
-    /* width: 44px; */
-    padding: 16px;
-}
-
-.navbar a:hover {
-    background-color: #04AA6D;
-    color: white;
-}
-
-#login:hover {
-    background-color: #019961;
-}
-
-#space:hover,
-#paid:hover {
-    background-color: #04AA6D;
-    color: white;
-}
 
 
 #learn-html {
